[tool.poetry]
name = "TestnetUsers"
version = "0.1.0"
description = ""
authors = ["manvsc <manvir.schneider@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
pandas = "^1.4.2"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
