[tool.poetry]
name = "DivaTestnetUsers"
version = "0.1.0"
description = ""
authors = ["manvsc <79197645+manvsc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
pandas = "^1.4.3"
numpy = "^1.23.0"
json2 = "^0.4.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
